--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "start": "grunt app"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.6",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "bower": "~1.4.1",
-    "grunt-cli": "~0.1.9",
-    "grunt-lintspaces": "~0.2.202",
-    "grunt-preprocess": "~3.0.1",
-    "grunt-contrib-jshint": "~0.7.1"
+    "bower": "1.8.8",
+    "grunt": "^1.0.1",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.5.0",
+    "grunt-contrib-jshint": "^0.7.1",
+    "grunt-contrib-qunit": "^0.3.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-legacy-log-utils": "1.0.0",
+    "grunt-lintspaces": "^0.2.202",
+    "grunt-preprocess": "^3.0.1",
+    "micromatch": "^3.1.10",
+    "phantomjs-prebuilt": "2.1.16",
+    "prettier": "^3.5.3",
+    "tough-cookie": "2.2.2"
+  },
+  "dependencies": {
+    "string-width": "^4.0.0"
   }
 }
